tests/e2e/time_values_invalid7.error
Error: syntax error in story at line 1, column 5

1|    a = 3m2s2s
          ^^^^^^

E0069: Time value duplication: `s` must only occur once
